<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Baghelkhand</string>
    <string name="login_title">Authenticate Yourself</string>
    <string name="signup_title">Signup Yourself</string>
    <string name="action_settings">Settings</string>
    <string name="logout_settings">Logout</string>
    <string name="hello_world">Hello world!</string>
    
    
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="signup">Sign Up</string>

</resources>
