<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="70px"
    	android:layout_marginTop="80px"
    	android:padding="10px"
    	android:orientation="horizontal" >
    
        <TextView 
            android:layout_width="fill_parent"
            android:layout_weight="3"
            android:layout_height="fill_parent"
            android:textSize="8pt"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:text="@string/username"/>
        
        <EditText 
            android:id="@+id/txt_username"
            android:layout_width="fill_parent"
            android:layout_weight="2"
            android:textColor="#F6F6F6"
            android:layout_height="fill_parent"
            />
        
   </LinearLayout>
   <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="70px"
    	android:padding="10px"
    	android:orientation="horizontal" >
    
        <TextView 
            android:layout_width="fill_parent"
            android:layout_weight="3"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:textSize="8pt"
            android:textColor="#FFFFFF"
            android:text="@string/password"/>
        
        <EditText 
            android:id="@+id/txt_password"
            android:layout_width="fill_parent"
            android:layout_weight="2"
            android:textColor="#F0F0F0"
            android:layout_height="fill_parent"
            />
        
   </LinearLayout>
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="60px"
    	android:layout_marginTop="50px"
    	android:gravity="center_horizontal"
    	android:orientation="horizontal" >
    
        <Button 
            android:id="@+id/btn_login"
			android:layout_width="40pt"
            android:layout_height="fill_parent"
            android:textColor="#F6F6F6"
            android:text="@string/login"/>
        
        <Button 
            android:id="@+id/btn_cancel"
            android:layout_width="40pt"
            android:layout_height="fill_parent"
            android:text="@string/cancel"
            android:textColor="#F6F6F6"
            />
        
   </LinearLayout>
   
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="70px"
    	android:layout_marginTop="50px"
    	android:gravity="center_horizontal"
    	android:orientation="horizontal" >
    
        <Button 
            android:id="@+id/btn_signup"
			android:layout_width="85pt"
            android:layout_height="fill_parent"
            android:textColor="#F6F6F6"
            android:textSize="10pt"
            android:text="@string/signup"/>
        
     </LinearLayout>

</LinearLayout>
